--- a/css/styles.css
+++ b/css/styles.css
@@ -21,28 +21,27 @@ body {
 
 img {
     display: block;
+    min-width: 100%;
+    height: auto;
 }
 
 .list {
-    padding: 0;
-    margin: 0;
     list-style: none;
 }  
 
+h1, h2, h3, h4, h5, h6, ul, p {
+    margin: 0;
+    padding: 0;
+}
+
 /* Шапка */
 .header {
-    margin-left: auto;
-    margin-right: auto; 
-    width: 1600px;
-
     border-bottom: 1px solid var(--header-border-color);
 }
+
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0 auto;
+    padding: 0 15px;
     width: 1200px;
 }
 
@@ -134,38 +133,33 @@ img {
 
 /* hero */
 .hero {
-    margin-right: auto;
-    margin-left: auto;
-    
-    width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
 
     background-color: var(--axent-background-color);
     color: var(--white-color);
-    letter-spacing: 0.06em;
     text-align: center;
 }
 
 .hero-title {
-    margin-top: 0;
     margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 200px;
-    width: 696px;
 
+    max-width: 696px;
+  
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
+
 .hero-button {
     display: inline-block;
     border-radius: 4px;
-    margin-bottom: 200px;
     padding: 10px 32px;
-
     min-width: 200px;
-
 
     background-color: var(--axent-color);
     color: inherit;
@@ -193,14 +187,8 @@ img {
 }
 
 .section {
-    margin-right: auto;
-    margin-left: auto;
     padding-top: 94px;
     padding-bottom: 94px;
-    padding-left: 15px;
-    padding-right: 15px;
-    
-    width: 1200px;
 }
 
 .section.no-padding {
@@ -228,25 +216,21 @@ img {
 }
 
 .section-work {
-    margin-top: 0;
     margin-bottom: 10px;
 
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+    text-transform: uppercase;
 }
 
 .paragraf {
-    margin-top: 0;
-    margin-bottom: 0;
-
     font-size: 14px;
     line-height: 1.72;
 }
 
 .section-title, .team-title {
-    margin-top: 0;
     margin-bottom: 50px;
 
     color: var(--title-text-color);
@@ -259,28 +243,23 @@ img {
 .team {
     padding-top: 94px;
     padding-bottom: 94px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1600px;
-
+    
     background-color: var(--secondary-background-color);
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
 }
 
+.team-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 .team-names {
-    margin-top: 30px;
-    margin-bottom: 10;
+    margin-bottom: 10px;
 
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
-}
-
-.position {
-    margin-top: 0;
-    margin-bottom: 30;
 }
 
 .team .cards {
@@ -288,17 +267,15 @@ img {
 }
 
 /* Footer */
-footer {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1600px;
-
+.footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
     background-color: var(--axent-background-color);
 }
 
 .logo-footer {
     display: inline-block;
-    margin-top: 0;
     margin-bottom: 20px;
 
     font-family: raleway, sans-serif;
@@ -315,7 +292,6 @@ footer {
 
 .adress {
     display: inline-block;
-    margin-top: 0;
     margin-bottom: 9px;
 
     color: var(--white-color);
@@ -332,7 +308,6 @@ footer {
         
 .footer-contacts {
     display: inline-block;
-    margin-top: 0;
     margin-bottom: 9px;
     color: var(--footer-contacts-color);
     font-style: normal;
@@ -378,7 +353,6 @@ footer {
 
 .filter .item:not(:last-child) {
     margin-right: 8px;
-
 }
 
 .filter-button:hover,
@@ -388,15 +362,12 @@ footer {
 }
 
 .filter.list {
-    margin-top: 0;
     margin-bottom: 50px;
 }
 
 .list.works {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 0;
-    margin-bottom: 0;
 }
 
 .element {
@@ -414,15 +385,13 @@ footer {
 }
 
 .cards-title {
+    padding: 20px 24px;
     border: 1px solid var(--cards-border-color);
     border-top: 0;
 }
 
 .client {
-    margin-top: 0;
-    margin-bottom: 4px;
-    padding-left: 20px;
-    padding-right: 20px;
+     margin-bottom: 4px;
     
     color: var(--title-text-color);
     font-weight: 700;
@@ -431,11 +400,6 @@ footer {
     letter-spacing: 0.06em;
 }
 .category {
-    margin-top: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-   
     font-size: 16px;
     line-height: 1.88;
 }
